syntax = "proto3";
package topstar.mytoken.v1;

import "amino/amino.proto";
import "gogoproto/gogo.proto";

option go_package = "topstar/x/mytoken/types";

// Params defines the parameters for the module.
message Params {
  option (amino.name) = "topstar/x/mytoken/Params";
  option (gogoproto.equal) = true;

  string mint_denom = 1;
  // burn_rate is the percentage of tokens to burn on transfer (e.g., 1 = 1%)
  uint64 burn_rate = 2;
  // treasury_rate is the percentage of tokens to send to treasury on transfer (e.g., 1 = 1%)
  uint64 treasury_rate = 3;
  // treasury_address is the address where treasury tokens are sent
  string treasury_address = 4;
}
